# warehouse-robot-models

./: CMakeLists.txt  README.md  kiva_plugin.cc  kiva_rotate_center.cc  lift.cc  main.cc  mov.cc  movx.cc  movy.cc  rot.cc  setup.sh  warehouse.world  warehouse_skeleton.world
examples/: warehouse.world  warehouse_rotate.world
kiva_plugins/: CMakeLists.txt  kiva_rotate.cc  kiva_rotate_center.cc  kiva_rotate_with_load.cc
models/item_box/: model.config  model.sdf
models/kiva/: model.sdf
models/shelf/: model.sdf
models/storage_unit/: model.config  model.sdf
ros/catkin_ws/src/robot_functions/: CMakeLists.txt  package.xml
ros/catkin_ws/src/robot_functions/atomic_configure/: _setup_util.py
ros/catkin_ws/src/robot_functions/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
ros/catkin_ws/src/robot_functions/devel/lib/pkgconfig/: robot_functions.pc
ros/catkin_ws/src/robot_functions/devel/share/robot_functions/cmake/: robot_functionsConfig.cmake
ros/catkin_ws/src/robot_functions/src/: kiva_rotate.cpp  kiva_rotate_node.cpp  robot_functions_node.cpp  ros_move_robot.cpp
ros/catkin_ws/src/robot_functions/urdf/: kiva_rotate.urdf
ros/catkin_ws/src/robot_functions/worlds/: warehouse.world
ros/catkin_ws/src/warehouse_functions/: CMakeLists.txt  package.xml
ros/catkin_ws/src/warehouse_functions/launch/: kiva_robots_launch.launch  warehouse_launch.launch
ros/catkin_ws/src/warehouse_functions/msg/: create_warehouse_msg_request.msg  create_warehouse_msg_response.msg
ros/catkin_ws/src/warehouse_functions/plugins/: kiva_rotate_center.cc  kiva_rotate_center.cpp  warehouse_world_plugin.cpp
ros/catkin_ws/src/warehouse_functions/src/: create_warehouse_node.cpp  create_warehouse_service_node.cpp  create_warehouse_topics.cpp  move_robots_publisher_node.cpp  move_robots_subscriber_node.cpp  track_items_node.cpp  track_storage_units_node.cpp
ros/catkin_ws/src/warehouse_functions/worlds/: warehouse.world
warehouse/: warehouse.world  warehouse_lg.world  warehouse_md.world  warehouse_sm.world
warehouse/models/kiva/: model.config  model.sdf
warehouse/models/shelf/: model.config  model.sdf
warehouse/warehouse_plugins/: CMakeLists.txt  load_worlds.cc  warehouse_plugin.cc
